[package]
name = "human-panic-logger"
version = "1.0.3"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/human-panic"
homepage = "https://github.com/yoshuawuyts/human-panic"
documentation = "https://docs.rs/human-panic"
description = "Panic messages for humans"
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>",
           "Pascal Hertleif <killercup@gmail.com>",
           "Katharina Fey <kookie@spacekookie.de>"]
readme = "README.md"
edition = "2018"

[package.metadata.docs.rs]
features = ["nightly"]

[dependencies]
termcolor = "1.0.4"
backtrace = "0.3.9"
log = "0.4.14"
simplelog = "0.10.0"

[features]
nightly = []
